--- a/.github/workflows/dawn.yml
+++ b/.github/workflows/dawn.yml
@@ -1,6 +1,8 @@
 # Global Settings
 env:
   MSVC_PATH: 'C:\Program Files (x86)\Microsoft Visual Studio\2019\Enterprise\VC'
+  DEPOT_TOOLS: ${{ github.workspace }}/depot_tools
+  DEPOT_TOOLS_WIN_TOOLCHAIN: 0
 
 name: Build Google Dawn
 on: [push]
