--- a/.github/workflows/dawn.yml
+++ b/.github/workflows/dawn.yml
@@ -69,8 +69,12 @@ jobs:
             out/src/include/
             out/gen/src/include/
 
+      - name: Print test
+        shell: bash
+        run: |
+          ls -R out
+
       - name: Cleanup space
         shell: bash
         run: |
           rm -rf out
-      
