--- a/.github/workflows/dawn.yml
+++ b/.github/workflows/dawn.yml
@@ -59,7 +59,7 @@ jobs:
           echo "Clean up debug build to free up space"
           rm -rf out
           gn gen out --args="${{ env.GNARGS }} ${{ env.GNARGS_RELEASE }}"
-          ninja -v -C out dawn_native dawn_platform dawn_proc dawn_wire
+          ninja -v -C out dawn_native_shared dawn_platform_shared dawn_proc_shared dawn_wire_shared
 
       - name: Upload Headers
         uses: actions/upload-artifact@v2
