--- a/.github/workflows/dawn.yml
+++ b/.github/workflows/dawn.yml
@@ -66,7 +66,7 @@ jobs:
         run: |
           mkdir -p output/include
           mkdir -p output/lib
-          mv -v out/gen/src/include/* output/include
+          mv -v out/src/out/gen/src/include/* output/include
           mv -v out/src/include/* output/include
           mv -v out/src/out/dawn_native.* output/lib
           mv -v out/src/out/dawn_platform.* output/lib
@@ -74,16 +74,16 @@ jobs:
           mv -v out/src/out/dawn_wire.* output/lib
           tar -C output -v -czf output.tar.gz lib include
 
+      - name: Print output
+        shell: bash
+        run: |
+          ls -R output
+
       - name: Upload output
         uses: actions/upload-artifact@v2
         with:
           name: ${{ matrix.target_os }}_${{ matrix.msvc_arch }}
           path: output.tar.gz
-
-      - name: Print out
-        shell: bash
-        run: |
-          ls -R out/src/out
 
       - name: Cleanup space
         shell: bash
