--- a/.github/workflows/dawn.yml
+++ b/.github/workflows/dawn.yml
@@ -134,6 +134,7 @@ jobs:
           rm -rf out
   release:
     name: "Publish to release"
+    runs-on: ubuntu-latest
     needs: build
     steps:
       - uses: actions/checkout@v2
