--- a/.github/workflows/dawn.yml
+++ b/.github/workflows/dawn.yml
@@ -23,7 +23,8 @@ jobs:
         shell: bash
         run: |
           echo "REVISION=$(git ls-remote ${{ env.DAWN_URL }} --heads ${{ env.DAWN_BRANCH }} | head -n 1 | cut -f 1)" >> $GITHUB_ENV
-          echo "::set-output name=revision::${REVISION}"
+          echo "REVISION: ${{ env.REVISION }}"
+          echo "::set-output name=revision::${{ env.REVISION }}"
 
   build:
     name: "Build Dawn"
