--- a/.github/workflows/dawn.yml
+++ b/.github/workflows/dawn.yml
@@ -135,6 +135,8 @@ jobs:
           mkdir out
           cp gclient out/.gclient
           echo 'target_os = ${{ matrix.gclient_os }}' >> out/.gclient
+          echo 'dawn_use_angle=false' >> out/.gclient
+          echo 'dawn_use_swiftshader=false' >> out/.gclient
 
       - name: Sync Dawn
         shell: bash
