--- a/.github/workflows/dawn.yml
+++ b/.github/workflows/dawn.yml
@@ -154,7 +154,7 @@ jobs:
         working-directory: out/src
         run: |
           gn gen out --args="${{ env.GNARGS }}"
-          ninja -v -C out dawn_native_shared dawn_platform_shared dawn_proc_shared dawn_wire_shared
+          ninja -v -C out dawn_native_shared dawn_platform_shared dawn_proc_shared dawn_wire_shared dawncpp
 
       - name: Pack - Headers
         shell: bash
